[gd_scene load_steps=22 format=3 uid="uid://w0fmp2ompqcd"]

[ext_resource type="Texture2D" uid="uid://ck56qpsuks6hc" path="res://Textures/Temp/Character/Female person/Tilesheet/character_femalePerson_sheet.png" id="1_fnrvj"]
[ext_resource type="Script" path="res://Scripts/Tower/archer.gd" id="2_3rkct"]

[sub_resource type="AtlasTexture" id="AtlasTexture_eepi1"]
atlas = ExtResource("1_fnrvj")
region = Rect2(192, 128, 96, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_arxgo"]
atlas = ExtResource("1_fnrvj")
region = Rect2(288, 128, 96, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_7p0x2"]
atlas = ExtResource("1_fnrvj")
region = Rect2(384, 128, 96, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_5xil5"]
atlas = ExtResource("1_fnrvj")
region = Rect2(480, 128, 96, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_y7ptj"]
atlas = ExtResource("1_fnrvj")
region = Rect2(0, 512, 96, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_45aa0"]
atlas = ExtResource("1_fnrvj")
region = Rect2(96, 512, 96, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_n7030"]
atlas = ExtResource("1_fnrvj")
region = Rect2(192, 512, 96, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_3yvb4"]
atlas = ExtResource("1_fnrvj")
region = Rect2(288, 512, 96, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_rfrpq"]
atlas = ExtResource("1_fnrvj")
region = Rect2(384, 512, 96, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_hs07k"]
atlas = ExtResource("1_fnrvj")
region = Rect2(480, 512, 96, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_qam7r"]
atlas = ExtResource("1_fnrvj")
region = Rect2(576, 512, 96, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_yd2y6"]
atlas = ExtResource("1_fnrvj")
region = Rect2(672, 512, 96, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_0mrvf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_eepi1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_arxgo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7p0x2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5xil5")
}],
"loop": true,
"name": &"Attacking",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_y7ptj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_45aa0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n7030")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3yvb4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rfrpq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hs07k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qam7r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yd2y6")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}]

[sub_resource type="BoxShape3D" id="BoxShape3D_fsyow"]

[sub_resource type="BoxShape3D" id="BoxShape3D_rrefv"]
size = Vector3(4.9, 0.25, 4.9)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_uqrth"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_73d65"]
bg_color = Color(0.752941, 0.266667, 0.266667, 1)
border_width_bottom = 3
border_color = Color(0.496103, 0.152412, 0.155195, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
expand_margin_bottom = 3.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ijshl"]
bg_color = Color(1.39579e-06, 0.73793, 0.390966, 1)
border_width_bottom = 3
border_color = Color(8.0619e-07, 0.424344, 0.215547, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
expand_margin_bottom = 3.0

[sub_resource type="ViewportTexture" id="ViewportTexture_j3qvo"]
viewport_path = NodePath("HealthBar/SubViewport")

[node name="Archer" type="AnimatedSprite3D" groups=["Tower"]]
offset = Vector2(0, 50)
billboard = 1
texture_filter = 0
sprite_frames = SubResource("SpriteFrames_0mrvf")
animation = &"Attacking"
frame_progress = 0.581197
script = ExtResource("2_3rkct")

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="HitboxArea" type="Area3D" parent="."]

[node name="Hitbox" type="CollisionShape3D" parent="HitboxArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
shape = SubResource("BoxShape3D_fsyow")

[node name="AttackArea" type="Area3D" parent="."]
collision_layer = 2
monitorable = false

[node name="AttackBox" type="CollisionShape3D" parent="AttackArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
shape = SubResource("BoxShape3D_rrefv")

[node name="HealthBar" type="Node3D" parent="."]

[node name="SubViewport" type="SubViewport" parent="HealthBar"]
transparent_bg = true
size = Vector2i(128, 32)

[node name="Panel" type="Panel" parent="HealthBar/SubViewport"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_uqrth")

[node name="Health" type="ProgressBar" parent="HealthBar/SubViewport/Panel"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -13.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxFlat_73d65")
theme_override_styles/fill = SubResource("StyleBoxFlat_ijshl")
value = 50.0

[node name="DisplayHealth" type="Sprite3D" parent="HealthBar"]
offset = Vector2(0, 100)
billboard = 1
texture_filter = 0
texture = SubResource("ViewportTexture_j3qvo")

[connection signal="timeout" from="AttackTimer" to="." method="_on_timer_timeout"]
[connection signal="area_entered" from="AttackArea" to="." method="_on_attack_area_area_entered"]
[connection signal="area_exited" from="AttackArea" to="." method="_on_attack_area_area_exited"]
